--- a/src/components/bottom-nav/bottom-nav.component.html
+++ b/src/components/bottom-nav/bottom-nav.component.html
@@ -25,11 +25,11 @@
                   @if (item.imageUrl) {
                     <img [src]="item.imageUrl" [alt]="item.name" class="h-6 w-6 flex-shrink-0 object-contain">
                   } @else if (item.icon) {
-                    <svg class="h-6 w-6 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" [attr.d]="item.icon" /></svg>
+                    <span class="material-symbols-outlined h-6 w-6 flex-shrink-0">{{ item.icon }}</span>
                   }
                   <span class="font-medium truncate">{{ item.name }}</span>
                 </div>
-                <svg class="h-5 w-5 transition-transform duration-200 flex-shrink-0" [class.rotate-90]="expandedGroups()[item.name]"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" /></svg>
+                <span class="material-symbols-outlined h-5 w-5 transition-transform duration-200 flex-shrink-0" [class.rotate-90]="expandedGroups()[item.name]">chevron_right</span>
               </button>
               @if (expandedGroups()[item.name]) {
                 <ul class="bg-gray-900/50">
@@ -38,7 +38,7 @@
                       <a [routerLink]="child.path" routerLinkActive="bg-blue-600 text-white" 
                          (click)="handleOffCanvasLinkClick()"
                          class="flex items-center h-12 pl-12 pr-4 space-x-4 text-gray-300 hover:bg-gray-700 hover:text-white transition-colors duration-200">
-                        <svg class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" [attr.d]="child.icon" /></svg>
+                        <span class="material-symbols-outlined h-5 w-5">{{child.icon}}</span>
                         <span class="font-medium truncate">{{ child.name }}</span>
                       </a>
                     </li>
@@ -52,7 +52,7 @@
                 @if (item.imageUrl) {
                   <img [src]="item.imageUrl" [alt]="item.name" class="h-6 w-6 flex-shrink-0 object-contain">
                 } @else if (item.icon) {
-                  <svg class="h-6 w-6 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" [attr.d]="item.icon" /></svg>
+                  <span class="material-symbols-outlined h-6 w-6 flex-shrink-0">{{ item.icon }}</span>
                 }
                 <span class="font-medium truncate">{{ item.name }}</span>
               </a>
@@ -70,7 +70,7 @@
                 @if (employee.photo_url) {
                   <img [src]="employee.photo_url" alt="Foto do funcionário" class="w-8 h-8 rounded-full object-cover">
                 } @else {
-                  <svg class="w-8 h-8 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path></svg>
+                  <span class="material-symbols-outlined text-4xl text-gray-400">account_circle</span>
                 }
               </div>
               <div class="flex-1 min-w-0">
@@ -92,7 +92,7 @@
             @if (companyProfile()?.logo_url; as logoUrl) {
               <img [src]="logoUrl" alt="Logo da Empresa" class="w-8 h-8 rounded-full object-cover">
             } @else {
-              <svg class="w-8 h-8 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0z" /></svg>
+              <span class="material-symbols-outlined text-4xl text-gray-400">storefront</span>
             }
           </div>
           <div class="flex-1 min-w-0">
@@ -116,9 +116,7 @@
          @for(item of group.children; track item.path) {
           <a [routerLink]="item.path" routerLinkActive="text-blue-500 bg-gray-700" (click)="handleLinkClick()"
              class="flex-shrink-0 inline-flex flex-col items-center justify-center px-5 hover:bg-gray-700 text-gray-400 w-24">
-            <svg class="w-6 h-6 mb-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" [attr.d]="item.icon" />
-            </svg>
+            <span class="material-symbols-outlined mb-1">{{ item.icon }}</span>
             <span class="text-xs text-center">{{ item.name }}</span>
           </a>
         }
@@ -139,9 +137,7 @@
           @if (item.imageUrl) {
             <img [src]="item.imageUrl" [alt]="item.name" class="w-6 h-6 mb-1 object-contain">
           } @else if (item.icon) {
-            <svg class="w-6 h-6 mb-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" [attr.d]="item.icon" />
-            </svg>
+            <span class="material-symbols-outlined mb-1">{{ item.icon }}</span>
           }
           <span class="text-xs text-center">{{ item.name }}</span>
         </button>
@@ -151,16 +147,14 @@
           @if (item.imageUrl) {
             <img [src]="item.imageUrl" [alt]="item.name" class="w-6 h-6 mb-1 object-contain">
           } @else if (item.icon) {
-            <svg class="w-6 h-6 mb-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" [attr.d]="item.icon" />
-            </svg>
+            <span class="material-symbols-outlined mb-1">{{ item.icon }}</span>
           }
           <span class="text-xs text-center">{{ item.name }}</span>
         </a>
       }
     }
     <button (click)="toggleOffCanvas()" class="flex-shrink-0 inline-flex flex-col items-center justify-center px-5 hover:bg-gray-700 text-gray-400 w-24">
-      <svg class="w-6 h-6 mb-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path></svg>
+      <span class="material-symbols-outlined mb-1">account_circle</span>
       <span class="text-xs">Conta</span>
     </button>
   </div>
